Fixed the issue with my CORS error and added ActiveX support. Mr. Wilford is the reason this program now runs on FireFox.

--- a/Assignment3Part2/assignment3Part2.css
+++ b/Assignment3Part2/assignment3Part2.css
@@ -110,16 +110,3 @@ body {
 .pageSelect:hover {
 	background-color: lightgreen;
 }
-/*.webpage {
-	float: left;
-	margin: 10px;
-	width: 100%;
-	height: 150px;
-}
-
-.portal {
-	float: left;
-	overflow: scroll;
-	height: 150px;
-	width: 90%;
-}*/
